--- a/assignment02.css
+++ b/assignment02.css
@@ -1,4 +1,68 @@
-/* --- pre-existing css --- */
+body 
+{
+   background-color:lightblue;
+}
+#igottabeme {
+font-family: Arial, Helvetica, sans-serif;
+}
+#positionme
+{background-color:orange;}
+nav{
+position:fixed;
+top:0px;
+left:0px;
+padding:5px;
+font-size:20px;
+background-color:green;
+opacity:0.9;
+}
+
+a[classy]{
+margin-left:10px;
+}
+
+DIV{
+    margin-bottom:50px;
+}
+.b{
+display:block;
+}
+.c{
+display:inline-block;
+}
+SPAN{
+    width:100px;
+    height:50px;
+    padding-top:5px;
+    padding-bottom:5px;
+    padding-left:20px;
+    padding-right:20px;
+    border-style:solid;
+    border-color:blue;
+    border-width:5px;
+    background-color:yellow;
+}
+img[alt="cat icon"]
+{
+position:fixed;
+bottom:0;
+    right:0;
+    
+}
+img[alt ="dog icon"]
+{
+position:relative;
+left:50px;
+bottom:150px;
+    
+}
+img[alt = "bird icon"]
+{
+    position:relative;
+top:50;
+left:250;
+}
+
 .stripey tr:nth-child(even) {
   background-color: gray;
 }
