--- a/HTML/Assignment02.css
+++ b/HTML/Assignment02.css
@@ -1,5 +1,7 @@
 
 /* --- pre-existing css --- */
+body{background-color: skyblue;}
+
 .stripey tr:nth-child(even) {
   background-color: gray;
 }
@@ -16,6 +18,11 @@
 .rightey td {
   text-align: right;
 }
+.classy{margin-left: 10px;}
+
 input[type="text"].pinkey:focus {
   background-color: pink;
+}
+#igottabeme{
+font-family: Arial,Helvetica, Sans-serif;
 }
