--- a/HTML/Assignment02.css
+++ b/HTML/Assignment02.css
@@ -1,7 +1,33 @@
 
 /* --- pre-existing css --- */
 body{background-color: skyblue;}
+div{margin-bottom: 50px;}
+span{
+  width: 100px;
+  height: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left:20px;
+  padding-right:20px;
+  border-style: solid;
+  border-color: blue;
+  border-width: 5px;
+  background-color: yellow;
+}
+span.a
+{
+word-wrap: normal;
 
+}
+span.b
+{
+position: relative;
+display: block;
+}
+span.c
+{
+
+}
 .stripey tr:nth-child(even) {
   background-color: gray;
 }
